# ntcheck

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  build  justbuild.it
.github/workflows/: cmake-multi-platform.yml  dos.yml  watcom.yml
include/: core.h  envcheck.h
src/: core.c  core.h  envcheck.h  main.c
